--- a/templates/found_stuff_details.html
+++ b/templates/found_stuff_details.html
@@ -35,6 +35,7 @@
     </table>
 	<br>
 
+    {% if user_id == found_user_id or current_user.is_admin %}
     <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#FoundSomething">Update Record</button>
 
     <div class="modal fade" id="FoundSomething" role="dialog">
@@ -105,7 +106,7 @@
 			</div>
 		</div>
 	</div>
-
+    {% endif %}
 
 
 
