--- a/templates/lost_stuff_details.html
+++ b/templates/lost_stuff_details.html
@@ -34,7 +34,8 @@
         </tr>
     </table>
 	<br>
-
+    
+    {%  if user_id == lost_user_id or current_user.is_admin %}
     <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#LostSomething">Update Record</button>
 
     <div class="modal fade" id="LostSomething" role="dialog">
@@ -105,7 +106,7 @@
 			</div>
 		</div>
 	</div>
-
+    {% endif %}
 
 
 
