--- a/templates/special_student_details.html
+++ b/templates/special_student_details.html
@@ -27,6 +27,7 @@
     </table>
 	<br>
 
+    {% if user_id == student_user_id or current_user.is_admin %}
     <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#SpecialStudent">Update Record</button>
 
     <div class="modal fade" id="SpecialStudent" role="dialog">
@@ -90,6 +91,7 @@
 		</div>
 	</div>
     <br>
+    {% endif %}
 
 
 
