--- a/templates/special_tutor_details.html
+++ b/templates/special_tutor_details.html
@@ -27,6 +27,7 @@
     </table>
 	<br>
 
+    {% if user_id == tutor_user_id or current_user.is_admin %}
     <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#SpecialTutor">Update Entry</button>
 
     <div class="modal fade" id="SpecialTutor" role="dialog">
@@ -88,6 +89,7 @@
 			</div>
 		</div>
 	</div>
+    {% endif %}
 
 
 
