--- a/templates/club_activities.html
+++ b/templates/club_activities.html
@@ -13,7 +13,7 @@
 				</div>
 				<div class="modal-body">
 					<form method="POST" action="" name="clubActivityForm" role="form">
-
+						<input type="hidden" name="form-name" value="Activity">
 						<div class="form-group">
 							<label for="InputActivityName">Activity Name</label>
 							<input class="form-control" name="InputActivityName" id="InputActivityName" placeholder="Enter Activity Name" type="text" required pattern=".*[^ ].*" title="This field is required">
