--- a/templates/itu_activities_detail.html
+++ b/templates/itu_activities_detail.html
@@ -13,6 +13,61 @@
 
 	<br>
 
+	{% if user_id == activity_user_id or current_user.is_admin %}
+
+	<button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#ITUActivities">Update Activity</button>
+
+	<div class="modal fade" id="ITUActivities" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Update Activity</h4>
+				</div>
+				<div class="modal-body">
+					<form method="POST" action="{{ url_for('site.ItuActivityPage') }}" name="ituActivityForm" role="form">
+						<input type="hidden" name="form-name" value="ActivityUpdate">
+						<input type="hidden" name="activity-id" value="{{ activity.get_id() }}">
+
+						<div class="form-group">
+							<label for="InputActivityName">Activity Name</label>
+							<input class="form-control" name="InputActivityName" id="InputActivityName" placeholder="Enter Activity Name" type="text" pattern=".*[^ ].*">
+						</div>
+
+						<div class="form-group">
+							<label for="InputParticipantName">Special Participant</label>
+							<input class="form-control" name="InputParticipantName" id="InputParticipantName" placeholder="Enter Participant's Name" type="text" pattern=".*[^ ].*">
+						</div>
+
+						<div class="form-group">
+							<label for="InputActivityDate">Activity Date</label>
+							<input class="form-control" name="InputActivityDate" id="InputActivityDate" type="date" value="date">
+						</div>
+
+						<div class="form-group">
+							<label for="InputActivityTime">Activity Time</label>
+							<input class="form-control" name="InputActivityTime" id="InputActivityTime" type="time" value="time">
+						</div>
+
+						<div class="form-group">
+							<label for="InputActivityLocation">Location</label>
+							<input class="form-control" name="InputActivityLocation" id="InputActivityLocation" placeholder="Enter Activity Location" type="text" pattern=".*[^ ].*">
+						</div>
+
+						<div class="form-group">
+							<label for="ActivityDescription">Description</label>
+							<input class="form-control" name="ActivityDescription" id="ActivityDescription" placeholder="Details about activity" type="text" pattern=".*[^ ].*">
+						</div>
+
+						<button type="submit" class="btn btn-default" id="buttonSend">Send</button>
+						<button type="reset" class="btn btn-default" id="buttonReset">Reset</button>
+
+					</form>
+				</div>
+
+			</div>
+		</div>
+	</div>
 
 	<button class="btn btn-info btn-md"  data-toggle="modal" data-target="#confirm-delete">
 		Delete record
@@ -39,7 +94,7 @@
 		</div>
 	</div>
 
-
+	{% endif %}
 
 
 {% endblock %}
