--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -14,6 +14,7 @@
 				</div>
 				<div class="modal-body">
 					<form method="POST" action="" name="gameAnnounceForm" role="form">
+						<input type="hidden" name="form-name" value="GameFriend">
 
 						<div class="form-group">
 							<label for="InputGameName">Game Name</label>
