--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -36,10 +36,24 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
+                    {% if form %}
+                        {% if 'email' in form.errors %}
+                            <div class="alert alert-danger">
+                                {{ form.errors['email'] }}
+                            </div>
+                        {% endif %}
+                    {% endif %}
                     <input class="form-control" id="email" name="email" type="email" aria-describedby="emailHelp" placeholder="Enter email" required>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Username</label>
+                    {% if form %}
+                        {% if 'username' in form.errors %}
+                            <div class="alert alert-danger">
+                                {{ form.errors['username'] }}
+                            </div>
+                        {% endif %}
+                    {% endif %}
                     <input class="form-control" id="username" name="username" type="text" aria-describedby="emailHelp" placeholder="Enter username" required>
                 </div>
                 <div class="form-group">
