--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -1,7 +1,105 @@
 {% extends "layout.html" %}
 {% block title %} Restaurants{% endblock %}
 {% block content %}
+    <div>
+        <script src="{{ url_for('static', filename='js/restaurants/restaurants.js') }}"></script>
+    </div>
 
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#AddRestaurant">Add Restaurant</button>
 
-
+    <div class="modal fade" id="AddRestaurant" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add Restaurant</h4>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" action="{{ url_for('site.RestaurantsPage') }}" name="AddRestaurant" role="form" required>
+                        <input type="hidden" name="form-name" value="AddRestaurant">
+                        <div class="form-group">
+                            <label for="RestaurantName">Restaurant Name</label>
+                            <input class="form-control" name="RestaurantName" placeholder="Enter Restaurant Name" type="text" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="MenuType">Menu Type</label>
+                            <input class="form-control" name="MenuType" placeholder="Enter Menu Type" type="text" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="InputMenuID">Select Menu ID</label>
+                            <input class="form-control" name="MenuID" placeholder="Enter menu id" type="text" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="InputMenuID">Select Campus Location</label>
+                            <input class="form-control" name="campusLocation" placeholder="Select campus location" type="text" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="RestaurantPoint">Enter Restaurant Point</label>
+                            <input class="form-control" name="RestaurantPoint" placeholder="Enter restaurant point" type="text" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="OpeningTime">Opening Time</label>
+                            <input class="form-control" name="OpeningTime"type="time" value="time" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="ClosingTime">Closing Time</label>
+                            <input class="form-control" name="ClosingTime" placeholder="Select closing time" type="time" value="time">
+                        </div>
+                        <div class="form-group">
+                            <label for="RestaurantOwnerMail">e-Mail of Owner</label>
+                            <input class="form-control" name="RestaurantOwnerEmail" placeholder="Enter e-Mail" type="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="OwnerPhone">Phone Number of Owner</label>
+                            <input class="form-control" name="RestaurantOwnerPhone" placeholder="05xxxxxxxxx" type="tel"  maxlength="11" minlength="11" pattern="(?:050|053|054|055?)\d{1}\d{7}" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="OwnerPhone">Service type</label>
+                            <input class="form-control" name="RestaurantServiceType" placeholder="Enter service type" type="text" required>
+                        </div>
+                        <button type="reset">Reset</button>
+                        <button type="submit" formmethod="POST">Send</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% if restaurants %}
+        <br><br>
+        <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+            <thead>
+            <tr role="row">
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 20%;" aria-label="Description: activate to sort column ascending">Description</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Possible Location: activate to sort column ascending">Possible Location</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 17%;" aria-label="Possible Date of Losing: activate to sort column ascending">Possible Date of Losing<br>(YYYY-MM-DD)</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 11%;" aria-label="Name of Owner: activate to sort column ascending">Name of Owner</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 16%;" aria-label="Contact Info: activate to sort column ascending">Contact Info</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
+            </tr>
+            </thead>
+            {% for item in restaurants %}
+                <tr>
+                    <td>{{ item[0] }}</td>
+                    <td>{{ item[1] }}</td>
+                    <td>{{ item[2] }}</td>
+                    <td>{{ item[3] }}</td>
+                    <td>{{ item[4] }}<br>{{ item[5] }}</td>
+                    <td>
+                        <a href="{{ url_for('site.SelectedProfilePage', username=item[6]) }}">
+                            <button type="submit"  class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Go to Profile</button>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{{ url_for('site.selected_lost_stuff', lostId=item[7]) }}">
+                            <button type="button" class="btn btn-info btn-md">Go to Details</button>
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <br>
+        <p>There are no items.</p>
+    {% endif %}
 {%endblock %}
