--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -91,7 +91,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="{{ url_for('site.selected_lost_stuff', lostId=item[7]) }}">
+                        <a href="{{ url_for('site.SelectedRestaurant', restaurantId=item[7]) }}">
                             <button type="button" class="btn btn-info btn-md">Go to Details</button>
                         </a>
                     </td>
