--- a/templates/restaurants_details.html
+++ b/templates/restaurants_details.html
@@ -13,7 +13,7 @@
     <p> Restaurant Owner Email: {{ restaurant.get_owner_email() }}</p>
 	<br>
 
-	{% current_user.is_admin %}
+	{% if current_user.is_admin %}
 
 	<button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#Restaurants">Update Restaurant</button>
 
