--- a/templates/sharedmyhouse_announcement.html
+++ b/templates/sharedmyhouse_announcement.html
@@ -4,9 +4,7 @@
 
 
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#SharingHouseAnnouncementModal">Share House</button>
-    <a href="{{ url_for('site.ProfileOfSharingHouseAnnouncementPage')}}">
-        <button type="button" class="btn btn-info btn-lg">Your Announcements</button>
-    </a>
+
 
     <div class="modal fade" id="SharingHouseAnnouncementModal" role="dialog">
         <div class="modal-dialog">
@@ -65,6 +63,7 @@
                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="NUMBER OF ROOM: activate to sort column ascending">NUMBER OF ROOM</th>
                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="DESCRIPTION: activate to sort column ascending">DESCRIPTION</th>
                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="OWNER OF ANNOUNCEMENT: activate to sort column ascending">OWNER OF ANNOUNCEMENT</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
                 </tr>
             </thead>
             {% for item in ALLSharingHouse %}
@@ -112,6 +111,11 @@
                             </div>
                         </div>
                     </td>
+                    <td>
+						<a href="{{ url_for('site.selected_sharingHouse', id=item[10]) }}">
+                            <button type="button" class="btn btn-info btn-md">Update/Delete</button>
+                        </a>
+					</td>
                 </tr>
             {% endfor %}
         </table>
