Sample entries are added, a bug is fixed in column name.

--- a/templates/sport_activities.html
+++ b/templates/sport_activities.html
@@ -62,7 +62,7 @@
 			<thead>
 			<tr role="row">
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Activity Name: activate to sort column ascending">Activity Name</th>
-				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Sport: activate to sort column ascending">Club</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Sport: activate to sort column ascending">Sport</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Date: activate to sort column ascending">Date</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Time: activate to sort column ascending">Time</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Location: activate to sort column ascending">Location</th>
