--- a/templates/searchedhouse_announcement.html
+++ b/templates/searchedhouse_announcement.html
@@ -98,6 +98,11 @@
                                  </div>
                              </div>
                         </td>
+                        <td>
+						<a href="{{ url_for('site.selected_searchingHouse', id=item[9]) }}">
+                            <button type="button" class="btn btn-info btn-md">Update/Delete</button>
+                        </a>
+					</td>
 
                 </tr>
             {% endfor %}
