--- a/templates/special_tutor_details.html
+++ b/templates/special_tutor_details.html
@@ -28,7 +28,7 @@
 	<br>
 
     {% if user_id == tutor_user_id or current_user.is_admin %}
-    <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#SpecialTutor">Update Entry</button>
+    <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#SpecialTutor">Update Record</button>
 
     <div class="modal fade" id="SpecialTutor" role="dialog">
         <div class="modal-dialog">
@@ -66,7 +66,7 @@
     </div>
 
 	<button class="btn btn-info btn-md"  data-toggle="modal" data-target="#confirm-delete">
-		Delete record
+		Delete Record
 	</button>
 
 	<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
