--- a/templates/found_stuff.html
+++ b/templates/found_stuff.html
@@ -55,11 +55,10 @@
             <tr role="row">
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 20%;" aria-label="Description: activate to sort column ascending">Description</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Current Location: activate to sort column ascending">Current Location</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 17%;" aria-label="Date of Finding: activate to sort column ascending">Date of Finding<br>(YYYY-MM-DD)</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 11%;" aria-label="Name of Finder: activate to sort column ascending">Name of Finder</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 16%;" aria-label="Contact Info: activate to sort column ascending">Contact Info</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 17%;" aria-label="Date of Finding: activate to sort column ascending">Date of Finding (YYYY-MM-DD)</th>
+
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 13%;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 10%;" aria-label="Edit-Update: activate to sort column ascending">Details</th>
 
             </tr>
             </thead>
@@ -69,8 +68,7 @@
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
                     <td>{{ item[2] }}</td>
-                    <td>{{ item[3] }}</td>
-                    <td>{{ item[4] }}<br>{{ item[5] }}</td>
+
                     <td>
                         <a href="{{ url_for('site.SelectedProfilePage', username=item[6]) }}">
                             <button type="submit"  class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Go to Profile</button>
