added warnings to some pages
added warnings to lost-found stuff pages and special student-tutor pages

--- a/templates/special_student.html
+++ b/templates/special_student.html
@@ -22,11 +22,11 @@
                             <input class="form-control" name="SpecialStudentSubject" placeholder="Enter Subject" type="text" required>
                           </div>
                           <div class="form-group">
-                            <label for="InputDescription">Name of Student</label>
+                            <label for="InputDescription">Name of Student(If left blank, your information is used)</label>
                             <input class="form-control" name="SpecialStudentName" placeholder="Enter Name of Student" type="text">
                           </div>
                           <div class="form-group">
-                            <label for="InputPossibleLocation">E-mail of Student</label>
+                            <label for="InputPossibleLocation">E-mail of Student(If left blank, your information is used)</label>
                             <input class="form-control" name="SpecialStudentMail" placeholder="Enter e-mail of Student" type="email">
                           </div>
                           <div class="form-group">
