--- a/templates/special_tutor.html
+++ b/templates/special_tutor.html
@@ -22,11 +22,11 @@
                             <input class="form-control" name="SpecialTutorSubject" placeholder="Enter Subject" type="text" required>
                           </div>
                           <div class="form-group">
-                            <label for="InputDescription">Name of Tutor</label>
+                            <label for="InputDescription">Name of Tutor(If left blank, your information is used)</label>
                             <input class="form-control" name="SpecialTutorName" placeholder="Enter Name of Tutor" type="text">
                           </div>
                           <div class="form-group">
-                            <label for="InputPossibleLocation">E-mail of Tutor</label>
+                            <label for="InputPossibleLocation">E-mail of Tutor(If left blank, your information is used)</label>
                             <input class="form-control" name="SpecialTutorMail" placeholder="Enter e-mail of Tutor" type="email">
                           </div>
                           <div class="form-group">
