--- a/templates/found_stuff.html
+++ b/templates/found_stuff.html
@@ -30,11 +30,11 @@
                             <input class="form-control" name="FoundSomethingDate" type="date" value="date" required><br>
                           </div>
                           <div class="form-group">
-                            <label for="FinderName">Name of person who found</label>
+                            <label for="FinderName">Name of person who found(If left blank, your information is used)</label>
                             <input class="form-control" name="FoundSomethingFinderName" placeholder="Enter Name" type="text">
                           </div>
                           <div class="form-group">
-                            <label for="FinderMail">e-Mail of person who found</label>
+                            <label for="FinderMail">e-Mail of person who found(If left blank, your information is used)</label>
                             <input class="form-control" name="FoundSomethingFinderMail" placeholder="Enter e-Mail" type="email">
                           </div>
                           <div class="form-group">
