--- a/templates/lost_stuff.html
+++ b/templates/lost_stuff.html
@@ -30,11 +30,11 @@
                             <input class="form-control" name="LostSomethingDate"type="date" value="date" required><br>
                           </div>
                           <div class="form-group">
-                            <label for="OwnerName">Name of Owner</label>
+                            <label for="OwnerName">Name of Owner(If left blank, your information is used)</label>
                             <input class="form-control" name="LostSomethingOwnerName" placeholder="Enter Name" type="text">
                           </div>
                           <div class="form-group">
-                            <label for="OwnerMail">e-Mail of Owner</label>
+                            <label for="OwnerMail">e-Mail of Owner(If left blank, your information is used)</label>
                             <input class="form-control" name="LostSomethingOwnerMail" placeholder="Enter e-Mail" type="email">
                           </div>
                           <div class="form-group">
