--- a/templates/sharingHouse_details.html
+++ b/templates/sharingHouse_details.html
@@ -42,17 +42,17 @@
                         <input type="hidden" name="sharingHouse-id" value="{{ sharingHouse.get_id() }}">
                         <div class="form-group">
                             <label for="InputLocationOfSharingHouse">Location</label>
-                            <input class="form-control" name="InputLocationOfSharingHouse" id="InputLocationOfSharingHouse" placeholder="Enter location" type="text" required>
+                            <input class="form-control" name="InputLocationOfSharingHouse" id="InputLocationOfSharingHouse" placeholder="Enter location" type="text">
                         </div>
 
                         <div class="form-group">
                             <label for="InputRentPriceOfSharingHouse">Rent Price</label>
-                            <input class="form-control" name = "InputRentPriceOfSharingHouse" id="InputRentPriceOfSharingHouse" placeholder="Enter Rent" type="text" required>
+                            <input class="form-control" name = "InputRentPriceOfSharingHouse" id="InputRentPriceOfSharingHouse" placeholder="Enter Rent" type="text">
                         </div>
 
                         <div class="form-group">
                             <label for="InputnumberOfPeopleInSharingHouse">Number of People in house Currently</label>
-                            <input class="form-control" name = "InputnumberOfPeopleInHouse" id="InputnumberOfPeopleInSharingHouse" type="text" required>
+                            <input class="form-control" name = "InputnumberOfPeopleInHouse" id="InputnumberOfPeopleInSharingHouse" type="text">
                         </div>
 
 
