--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,4 +7,35 @@
     <p>{{ user.get_username() }}</p>
     <p>{{ user.get_email() }}</p>
 
+    <a href="{{ url_for('site.SelectedProfileId', userId=user.get_user_id(user.get_username()), user=user)}}">
+        <button type="button" class="btn btn-info btn-md">Go to Profile</button>
+    </a>
+
+    <button class="btn btn-info btn-md"  data-toggle="modal" data-target="#confirm-delete">
+		Delete record
+	</button>
+
+	<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<p>Delete Record</p>
+				</div>
+				<div class="modal-body">
+					<p>Are you sure to delete {{ user.get_username() }} record? </p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+
+					<form method="post" action="{{ url_for('site.DeleteUser',  id=user.get_user_id(user.get_username())) }}">
+						<button type="submit" class="btn btn-danger btn-ok">Delete</button>
+					</form>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
 {% endblock %}
