--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,15 +1,14 @@
 {% extends "layout.html" %}
 {% block title %} Profile Page {% endblock %}
 {% block content %}
-    <h1>Welcome to ITUHelper!</h1>
+    <h1>{{ user.get_name()}} {{ user.get_surname()}}</h1>
 
+    <p>Username: {{ user.get_username() }}</p>
+    <p>Email: {{ user.get_email() }}</p>
+    <p>Faculty id: {{ user.get_faculty_id() }}</p>
 
-    <p>{{ user.get_username() }}</p>
-    <p>{{ user.get_email() }}</p>
+    {% if current_user.is_admin or user.get_username() == current_user.get_username() %}
 
-    <a href="{{ url_for('site.SelectedProfileId', userId=user.get_user_id(user.get_username()), user=user)}}">
-        <button type="button" class="btn btn-info btn-md">Go to Profile</button>
-    </a>
 
     <button class="btn btn-info btn-md"  data-toggle="modal" data-target="#confirm-delete">
 		Delete record
@@ -35,6 +34,41 @@
 			</div>
 		</div>
 	</div>
+
+    {% endif %}
+    <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#UserUpdate">Update User</button>
+
+        <div class="modal fade" id="UserUpdate" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Update User</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form method="POST" action="{{ url_for('site.SelectedProfilePage', username=user.get_username()) }}" name="UserUpdate" role="form">
+                            <input type="hidden" name="form-name" value="UserUpdate">
+                            <input type="hidden" name="user-id" value="{{ user.get_id() }}">
+                            <div class="form-group">
+                                <label for="Name">Name</label>
+                                <input class="form-control" name="Name" placeholder="Enter new name(if you want to update)" type="text" >
+                            </div>
+                            <div class="form-group">
+                                <label for="Surname">Surname</label>
+                                <input class="form-control" name="Surname" placeholder="Enter new surname(if you want to update)" type="text" >
+                            </div>
+                            <div class="form-group">
+                                <label for="Email">Email</label>
+                                <input class="form-control" name="Email" placeholder="Enter new email(if you want to update)" type="text" >
+                            </div>
+
+                            <button type="reset">Reset</button>
+                            <button type="submit" formmethod="POST">Send</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
